# otimizador_alocacoes

./: .gitignore  Otimizador.ipynb  README.md  Resultado.xlsx  alocacao.ipynb  alocacao.py  alocacao_equipe.py  alocacao_v2.py  concatenar_linhas.py  dados_cliente.csv  dados_tratados.csv  data_preparation.py  exec_otimizador.py  fases_and_dates.csv  functions.py  main.py  otimizador.py  planejamento.csv  planejamento.ipynb  planejamento.py  pyproject.toml  requirements.txt  senior.csv  senior_alocacao_final.csv  setup.cfg  staff 2.csv  staff 2_alocacao_final.csv  staff 3.csv  staff 3_alocacao_final.csv  trainee.csv  trainee_alocacao_final.csv
Análises/: Análise Resultados.ipynb
Bases/: Configuracao_Empresas.csv  Configuração Grupos.xlsx  fases_projetos.csv
Outputs/: Resultado.xlsx  senior_alocacao_final.csv  staff 2_alocacao_final.csv  staff 3_alocacao_final.csv  trainee_alocacao_final.csv
Staging/: senior.csv  staff 2.csv  staff 3.csv  trainee.csv
alocacao/: pyvenv.cfg
alocacao/Scripts/: activate  activate.bat
src/allocpro/: alocacao.py  backup.py  concatenar_linhas.py  config.py  exec_otimizador.py  main.py  otimizador.py  utils.py
